http://bugzilla.zimbra.com/show_bug.cgi?id=15846 bug: 15846 Somehow, the border width on IE is only 1px. Modify the style sheet to fix it for IE.

--- a/ZimbraWebClient/WebRoot/js/zimbraAdmin/config/style/zmadmin.css
+++ b/ZimbraWebClient/WebRoot/js/zimbraAdmin/config/style/zmadmin.css
@@ -671,6 +671,9 @@ P, TD, DIV, SPAN, SELECT, INPUT, TEXTAREA, BUTTON {
 
 .ZToolbarButtonBorder {
 	border: 2px solid transparent; 	
+#IFDEF MSIE
+	border: 1px solid transparent; 	
+#ENDIF
 }
 
 .ZaSearchOptionViewSubHeader {
